Run tests without fuzzers

--- a/src/fuzz/Makefile
+++ b/src/fuzz/Makefile
@@ -2,7 +2,7 @@ summary: run.out
 	awk '$$3 == "original" && $$5 == "OK"{ status[$$1]++ } END {for (i in status) print i, status[i], "/ 33"}' $<
 
 run.out:
-	bash run.sh >$@
+	bash run.sh -v >$@
 
 clean:
 	rm -f run.out
