Add results per language report

--- a/src/fuzz/Makefile
+++ b/src/fuzz/Makefile
@@ -1,5 +1,8 @@
 summary: run.out
-	awk '$$3 == "original" && $$5 == "OK"{ status[$$1]++ } END {for (i in status) print i, status[i], "/ 33"}' $<
+	@echo "Results per task"
+	@awk '$$3 == "original" && $$5 == "OK"{ status[$$1]++ } END {for (i in status) print i, status[i], "/ 33"}' $<
+	@echo "Results per language"
+	@awk 'BEGIN {ntasks = '`find ../tasks -maxdepth 1 -type d | wc -l`'} $$3 == "original" && $$5 == "OK"{ status[$$2]++ } END {for (i in status) print i, status[i], "/ ", ntasks * 3}' $<
 
 run.out:
 	bash run.sh >$@
