Changes following to camera-ready feedback
Feedback:
Please fix the following on your submission and submit your fixed/revised files on or before November 25th:

1. Your completed ACM eform is needed. Please see this link: http://cms.acm.org/forms/copyright.cfm?confID=020500021C05020408&proceedingID=04020801&paperID=04&sequence=1      to complete the appropriate ACM form. The new eform usually only takes moments to complete, kindly attend to this within the next 48 hours.

2. Please use \vfill\eject before reference 32 to move more over to column two (2) and produce a more balanced last page. (This command is great for forcing material over to the next page.) Be sure that you have run bibtex, then cut and paste the references from your bbl file into your tex file.

3. Please use a force break in the copyright permission blurb so the last two lines begin with \PLATEAU'12 (italicized) and \Copyright, respectively.

--- a/pub/camera-ready/Makefile
+++ b/pub/camera-ready/Makefile
@@ -1,10 +1,9 @@
-
 all:
 	latex fuzzer.tex
 	latex fuzzer.tex
-
-ps: all
 	dvips -P pdf -t letter -o fuzzer.ps fuzzer.dvi
+	pdflatex fuzzer
+	pdflatex fuzzer
 
 clean:
 	-rm -f fuzzer.aux
